--- a/clone_chrome/index.html
+++ b/clone_chrome/index.html
@@ -1,47 +1,102 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <link rel="stylesheet" href="css/style.css" />
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>Clone Google</title>
 </head>
 
 <body>
-    <div class="img">
-        <img src="./img/img1.jpg" alt="배경이미지">
-        <div class="login-box">
+    <section id="header">
+        <div class="container-fluid">
+            <h2 id="clock" class="text-muted"></h2>
+        </div>
+    </section>
 
-        <form id="login_form" class="hidden">
-            <input required maxlength="15" type="text" placeholder="what is your name?" />
-            <button>Login</button>
-        </form>
-
-        <h1 id="greeting" class="hidden"></h1>
-        <h2 id="clock"></h2>
-            <div id="quote">
-                <h4><span></span>
-                <span></span></h4>
-            </div>
-        
-        <div class="todo-box">
-            <form id="todo-form">
-                <input required type="text" placeholder="할 일을 적어주세요">
+    <section id="main-page" class="d-flex flex-column">
+        <div class="container">
+            <form id="login_form" class="hidden">
+                <div class="input-group mb-3">
+                    <input type="text" required maxlength="15" class="form-control"
+                    placeholder="What is your name? " aria-label="username" aria-describedby="button-addon2">
+                    <button class="btn btn-outline-secondary" type="button" id="button-addon2">Login</button>
+                </div>
             </form>
-            <ul id="todo-list"></ul>
+            <div class="container-fluid">
+                <div class="todo-box">
+                    <div class="container py-5 h-100">
+                        <div class="row">
+                            <h1 id="greeting" class="hidden"></h1>
+                        </div>
+                        <div class="row">
+                            <form id="todo-form">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <div class="d-flex flex-row align-items-center">
+                                            <input type="text" class="form-control form-control-lg" id="todo-input"
+                                                name="todo" placeholder="Add new Todo list">
+                                            <div class="add-btn">
+                                                <button type="button" class="btn btn-secondary btn-lg add_btn">Add</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                        <hr class="my-4">
+                        <div class="row">
+                            <div class="card item-box">
+                                <div class="card-body">
+                                    <ul class="item-list">
+    
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
-        <div id="weather">
-            <span></span>
-            <span></span>
+    </section>
+
+
+
+    <!-- <img src="./img/img1.jpg" alt="배경이미지"> -->
+
+
+    <footer>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-2">
+                    <div id="weather">
+                        <span></span>
+                        <span></span>
+                    </div>
+                </div>
+                <div class="col-10">
+                    <div id="quote">
+                        <span class="blockquote"></span>
+                        <span class="blockquote-footer" id="cite"></span>
+                    </div>
+                </div>
+            </div>
+
+
         </div>
+    </footer>
 
 
-    </div>
+
+
 
 
     <!-- JQuery 이용-->
@@ -54,6 +109,9 @@
     <script src="js/quotes.js"></script>
     <script src="js/todo.js"></script>
     <script src="js/weather.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
